--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -22,6 +22,11 @@
             </button>
           </div>
         </form>
+        <hr />
+        <div class="mt2" *ngIf="displayUrl">
+          <h3>Shortened URL</h3>
+          <p><a href={{shortUrl}} target="_blank">{{shortUrl}}</a></p>
+        </div>
       </div>
     </div>
   </div>
